# GPCR_MD_analysis

./: ApproachComparisson.py  Notes.md  README.md  SimilarityAnalyser.py  cluster_df.csv  compare_clusters.ipynb  md_analysis.py  pdb_sequences.fasta  pdb_to_fasta.py  pyproject.toml  sequence_analysis_dimitri.py  test_overlap.py  test_translation.py
Alignments_and_fasta/: ECL2_regions_457_537.fasta
Scripts/: ApproachComparisson.py  SimilarityAnalyser.py  md_analysis.py  pdb_to_fasta.py
example_output/: assinged_clusters_vmd.csv
